# UWr

./: .gitignore  README.en.md  README.md  clear.sh  package.json
PlanerV2/: PlanerV2.xlsx
Sem1/: README.md
Sem1/MIA/: template.cpp
Sem1/MIA/Contest 1/: A.cpp  Av2.cpp  B.cpp  Bv2.cpp  C.cpp
Sem1/MIA/Contest 10/: A.cpp  B.cpp
Sem1/MIA/Contest 11/: A.cpp  B.cpp
Sem1/MIA/Contest 12/: A.cpp  B.cpp
Sem1/MIA/Contest 13/: A.cpp
Sem1/MIA/Contest 14/: A.cpp  B.cpp
Sem1/MIA/Contest 15/: A.cpp  B.cpp
Sem1/MIA/Contest 2/: A.cpp  B.cpp  Bv2.cpp
Sem1/MIA/Contest 3/: A.cpp  B.cpp
Sem1/MIA/Contest 4/: Av1.cpp  Av2.cpp  B.cpp
Sem1/WdpC/: code_parser.cpp  main.c  program_parsed.c  template.c
Sem2/: README.md
Sem2/AI/: README.md
Sem2/CPP/: README.md  zad2.cpp
Sem2/MP/: README.md
Sem2/PARO/: README.md  clang-tidy-after.txt  clang-tidy-before.txt  main  main.cpp  valgrind-after.txt  valgrind-before.txt  valgrind.txt
Sem2/PO/: README.md  template.c
Sem3/: README.md
Sem3/AN/: README.md
Sem3/KPABD/: README.md
Sem3/PY/: README.md
Sem3/WEPPO/: README.md
Sem4/: README.md
Sem4/AISD/: .gitignore  README.md
Sem4/React/: create_vite_project.bat
Sem4/dotNET/: README.md
Sem5/: README.md
Sem5/AI2/: README.md
Sem5/ML/: .gitignore  README.md
Sem6/: template.cpp
Sem6/AP/: .gitignore  README.md  notatki.md  template.cpp  wzorki.md
Sem6/Linux/: README.md
Sem6/NN/: .gitignore
Sem6/SK/: .gitignore
Sem6/UMA/: README.md  helper.md  main.tex  reference.bib
Sem7/Embedded/: .gitignore  clean_all.bash  general_lib.c  lectures.md
Sem7/LM/: .gitignore  README.md  requirements.txt  shell.nix
Sem7/PrASK/: lecutres.md  list2.md  list3.md  list4.md  list6.md
Sem8/ADM/: .gitignore  README.md
Sem8/ADM/List3/transformer/: .gitignore  README.md  config.py  dataset.py  main.py  model.py  pyproject.toml  train.py
Sem8/ADM/List6/: .gitignore  main.ipynb  main2.ipynb  pyproject.toml  start_jupyter_server.sh  task1_config.yaml
Sem8/DL/: README.md
Sem8/Krypto/: .envrc
(+1978 files in other folders)
