[project]
name = "adm-list6"
version = "0.1.0"
description = "Local notebook environment for ADM List 6"
requires-python = ">=3.12,<3.13"
dependencies = [
    "colorama==0.4.4",
    "colorlog==4.7.2",
    "ipykernel>=6.29,<7",
    "jupyter>=1.1,<2",
    "kmeans-pytorch>=0.3",
    "matplotlib>=3.9,<3.11",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "plotly>=6.0,<7",
    "pyyaml>=6.0,<7",
    "recbole>=1.2.0",
    "scikit-learn>=1.5,<1.9",
    "scipy==1.12.0",
    "tabulate>=0.9,<0.11",
    "tensorboard>=2.20,<3",
    "texttable>=1.7,<2",
    "thop>=0.1.1.post2209072238,<0.2",
    "torch==2.3.1",
    "tqdm>=4.66,<5",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
