[project]
name = "transformer"
version = "0.1.0"
description = "Building a Transformer from Scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"numpy>=2.4.3",
	"torch==2.3.*",
	"torchtext==0.18.*",
	"datasets>=4.1.1",
	"tokenizers>=0.22.1",
	"torchmetrics>=1.8.2",
	"tensorboard>=2.20.0",
	"tqdm>=4.67.1",
]
